Ecommerce-Backend/manifestfiles/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecommerce-backend
  template:
    metadata:
      labels:
        app: ecommerce-backend
    spec:
      containers:
      - name: ecommerce-app
        image: poojithagouni/ecommerce-backend:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080

        resources:
          requests: 
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "200m"
            memory: "512Mi"

        startupProbe:
          httpGet:
            path: api/products
            port: 8080
          failureThreshold: 50
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: api/products
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: api/products
            port: 8080
          initialDelaySeconds: 40
          periodSeconds: 10
