Ecommerce-Backend/manifestfiles/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-backend-service
spec:
  type: ClusterIP
  selector:
    app: ecommerce-backend
  ports:
  - port: 80
    targetPort: 8080
