Ecommerce-Backend/manifestfiles/mq-sql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-db  
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306
  type: ClusterIP
