Ecommerce-Backend/manifestfiles/allow-backend-sql.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-mysql
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: mysql   # your mysql pod label
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: ecommerce-backend
    ports:
    - protocol: TCP
      port: 3306
