Ecommerce-Backend/manifestfiles/allow-ingress-backend.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-backend
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: ecommerce-backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector: {}   # allows from anywhere (safe for now)
    ports:
    - protocol: TCP
      port: 8080
